manifests/douyo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: douyo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: douyo
  name: douyo
  namespace: douyo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: douyo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: douyo
    spec:
      containers:
      - image: kinadu/douyo
        imagePullPolicy: Always
        name: douyo
        volumeMounts:
        - mountPath: /app/data
          name: data
      - image: kinadu/douyo
        imagePullPolicy: Always
        name: douyo-bat
        command: ["/app/bat/digzon.sh"]
        volumeMounts:
        - mountPath: /app/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nfs-claim-douyo
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: douyo
  name: douyo
  namespace: douyo
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: douyo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: douyo
  namespace: douyo
spec:
  rules:
  - host: douyo.inajob.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: douyo
          servicePort: 80
